# agentic-ecosystem

./: .env.example  .gitignore  ENHANCED_BA_SUMMARY.md  README.md  comprehensive_test_report.json  demo_ba_full.py  demo_enhanced_ba.py  fix_tests.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_ba_tests.py  run_tests.py  start_complete_system.py  test_ba_prompts.py  test_enhanced_agents.py  test_enhanced_ba_simple.py  test_enhanced_mcp.py  test_langgraph.py  test_prompt_system.py  test_results_architect_agent.json  test_results_business_analyst_agent.json  test_results_developer_agent.json  test_results_langgraph_workflow.json  test_results_mcp_server.json  test_results_tester_agent.json  test_server.py  test_simplified_ba.py  test_status_tracker.py  test_summary.py
data/: projects.json
docs/: BA_Agent_Testing_Guide.md  README.md
src/: ba_service.py  cli.py  web_server.py
src/agents/: __init__.py  architect_agent.py  ba_agent.py  base_agent.py  developer_agent.py  enhanced_ba_agent.py  tester_agent.py
src/langgraph_agents/: __init__.py  agent_tools.py  enhanced_mcp_server.py  mcp_server.py  workflow.py
src/mcp_servers/: main_server.py
src/models/: __init__.py
src/orchestrator/: orchestrator_agent.py
src/prompts/: architect_agent.yaml  ba_agent.json  utils.py
src/utils/: __init__.py  logger.py  (+2 more)
static/: index.html
tests/: README.md  ba_test_config.py  test_architect_agent.py  test_ba_agent.py  test_ba_standalone.py  test_developer_agent.py  test_enhanced_ba_agent.py  test_mcp_server.py  test_tester_agent.py  test_workflow.py
(+4 files in other folders)
